agora sim papai arrumando o problema de build sem levar as imagens nesta porra

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build": "vite build && npm run copy-images",
+        "copy-images": "cp -R public/default/ public/build/assets/default/",
         "dev": "vite"
     },
     "devDependencies": {
@@ -10,7 +11,8 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vite-plugin-copy": "^0.1.6"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
